force-app/main/default/objects/Feedback_Survey__c/Feedback_Survey__c.object-meta.xml
<CustomObject>
    <description>Records CSAT and NPS survey responses linked to Cases and Contacts. CSAT scores feed the Account Health Score calculation. Core layer object — present in all verticals. Do not modify from a vertical branch.</description>
    <label>Feedback Survey</label>
    <nameField>
        <displayFormat>SURVEY-{00000}</displayFormat>
        <label>Survey Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback Surveys</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>