force-app/main/default/objects/Feedback_Survey__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source case that triggered this survey. Optional — NPS surveys may not be case-linked.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Feedback Surveys</relationshipLabel>
    <relationshipName>Feedback_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>