force-app/main/default/objects/Feedback_Survey__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Free-text qualitative response from the contact.</description>
    <label>Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>