force-app/main/default/objects/Feedback_Survey__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Date and time the contact submitted the survey response.</description>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>