force-app/main/default/objects/Feedback_Survey__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact who received this survey.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Feedback Surveys</relationshipLabel>
    <relationshipName>Feedback_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>