force-app/main/default/objects/Feedback_Survey__c/fields/CSAT_Score__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Score__c</fullName>
    <description>Customer satisfaction score on a 1–5 scale. Validated by VR to enforce range. Feeds Account Health Score CSAT component via AccountHealthScoreService.</description>
    <label>CSAT Score</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>