force-app/main/default/objects/Feedback_Survey__c/fields/NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>NPS_Score__c</fullName>
    <description>Net Promoter Score on a 0–10 scale. Validated by VR to enforce range.</description>
    <label>NPS Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>