force-app/main/default/objects/Feedback_Survey__c/fields/Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_Date__c</fullName>
    <description>Date and time the survey was dispatched to the contact.</description>
    <label>Sent Date</label>
    <type>DateTime</type>
</CustomField>